Fixing horizontal scrolling on smaller devices

--- a/style/hero.css
+++ b/style/hero.css
@@ -14,20 +14,60 @@ h5,
 h6 {
   color: black;
   font-family: var(--heading-font-family);
-  font-weight: bolder;
+  font-weight: bold;
 }
 
 body {
   font-family: var(--default-font-family);
   color: black;
   background-color: var(--secondary-color);
-  line-height: 1.5;
+  line-height: 1.2;
   width:100%;
-  
+  overflow-x: hidden;
 }
 
+.project-description{
+
+  padding:120px 28px;
+}
+
+@media(max-width:768px){
+
+
+  .content{
+ width:100%;
+  margin-left: auto;
+  margin-right: auto;
+   overflow-x: hidden;
+   
+}
+
+}
+
+@media(max-width:768px){
+  .content p{
+  font-size: 14px;
+  margin-right: 20px;
+
+  }
+}
+
+
+
+@media(max-width:768px){
+  .content-container{
+    
+ width:100%;
+  margin-left: -30px;
+  margin-right: auto;
+  overflow-x: hidden;
+
+  }
+}
+
+
 h1 {
-  font-size: 97px;
+  font-size: 95px;
 }
 
 p {
@@ -96,7 +136,7 @@ p{
 @media (max-width:900px){
     h1{
         font-size: 44px;
-        line-height: 2;
+        line-height: 1.5;
     }
 }
 .text-muted{
@@ -127,7 +167,7 @@ p{
 
 }
 .content{
-  margin: 50px;
+  margin: 30px;
 }
 
 
@@ -140,20 +180,21 @@ p{
   font-family: var(--default-font-family);
 }
 .img-fluid{
-  max-width:100%;
+  max-width: 100%;
   height: auto;
-  border-radius: 6px;
+  border-radius: 10px;
   box-sizing: border-box;
+  margin-left:30px;
 }
 
 p{
   font-weight: normal;
   font-size: 16px;
-  line-height: 30px;
+  line-height: 50px;
 }
 
 .content-container{
-  padding: 160px 20px;
+  padding: 60px 20px;
 }
 
 .content-container{
@@ -316,47 +357,6 @@ p{
   font-weight: 400;
 }
 
-.progress{
-  background-color: #EFDDCF;
-  box-shadow: none;
-  height:5px;
-  margin-bottom: 30px;
-  border-radius: 4px;
-  overflow: visible;
-}
-
-
-.progress-title{
-  font-family: Georgia, 'Times New Roman', Times, serif;
-  font-size: 16px;
-  font-weight: 700;
-  margin: 15px  20px;
-  left: 8px;
-}
-
-.progress-bar{
-  animation: animate-positive 2s;
-  background: #6c757d;
-  opacity: 9;
-  position: relative;
-  overflow: visible;
-}
-
-
-.sec_sp{
-
-
-border-radius: 10px;
-
-}
-.progress .progress-value{
-  font-size: 17px;
-  font-style: 700;
-  position: absolute;
-  right: 30px;
-  top:-30px;
-  color: palevioletred ;
-}
 
 @media(max-width:768px){
   .container{
@@ -364,8 +364,6 @@ border-radius: 10px;
 
   }
 }
-
-
 
 
 
